[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulator"
license = {file = "license.txt"}
version = "v0.1.3-beta"
description = "Reticulator is a library for interacting with Minecraft Bedrock Add-ons programmatically."
readme = "readme.md"
keywords = ["MINECRAFT", "BEDROCK-EDITION", "BEDROCK-ADDONS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dpath==2.1.2"
]

[metadata]
author = "SirLich"
author_email = "SirLich.business@gmail.com"